# FFmpegSync

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FFmpegAudio.cpp  FFmpegAudio.h  FFmpegVideo.cpp  FFmpegVideo.h  Log.h  native-lib.cpp
app/src/main/java/com/ocean/ffmpeg/: MainActivity.java  MusicPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
